add html, styles and js for first method

--- a/index.html
+++ b/index.html
@@ -8,7 +8,27 @@
     <link rel="stylesheet" href="./style/style.css">
 </head>
 <body>
-    
+    <div class="container">
+        <h1>Dynamic adaptive</h1>
+        <main class="content">
+            <section class="content__section">
+                <h2 class="content__title">Firs place</h2>
+                <div class="content__blocks content__blocks_first">
+                    <div class="content__block content__block_1">First block</div>
+                    <div class="content__block content__block_item content__block_2 click">Need to move</div>
+                    <div class="content__block content__block_3">Third block</div>
+                </div>
+            </section>
+            <section class="content__section">
+                <h2 class="content__title">Second place</h2>
+                <div class="content__blocks content__blocks_second">
+                    <div class="content__block content__block_1">Fourth block</div>
+                    <div class="content__block content__block_2 click">Fifth block</div>
+                </div>
+            </section>
+        </main>
+    </div>
+
     <script src="./js/script.js" type="module"></script>
 </body>
 </html>
